# SVNexus

./: .gitignore  README.md  SVNexus.sln
SVNexus/: App.axaml  App.axaml.cs  Program.cs  SVNexus.csproj  SVNexus.sln  ViewLocator.cs  app.manifest  package.py  uniffi.toml
SVNexus/Behaviors/: ContextMenuBehavior.cs  ContextMenuControlBehavior.cs  DocumentTextBindingBehavior.cs  FreezeSizeOnFirstBehavior.cs  RoutedEventBehavior.cs
SVNexus/Components/: AdvancedEditor.cs  AdvancedTreeView.cs  AdvancedTreeViewItem.cs  DifferenceEditor.axaml  DifferenceEditor.axaml.cs  GroupBox.axaml  GroupBox.axaml.cs  LoadingDot.axaml  LoadingDot.axaml.cs  LoadingOrError.axaml  LoadingOrError.axaml.cs  LoadingSvgButton.axaml  LoadingSvgButton.axaml.cs  LucideIconButton.axaml  LucideIconButton.axaml.cs  PathIconButton.axaml  PathIconButton.axaml.cs  QtLikeVisibleControl.cs  SVGButton.axaml.cs  StatusEntryItem.axaml  StatusEntryItem.axaml.cs  SvgButton.axaml  SvgRender.cs  TargetItem.axaml  TargetItem.axaml.cs  UniqueOverlayDialogHost.cs
SVNexus/Converters/: EqualsConverter.cs  ListConverter.cs  StaticResourceConverter.cs
SVNexus/Engine/: CollectionExtension.cs  ContextNotifierDelegate.cs  Engine.cs  EngineBackend.cs  EngineHandler.cs  EngineProxy.cs  InitializeRepositoryNotifierDelegate.cs  LogReceiverDelegate.cs  StatusReceiverDelegate.cs  UpdateOperation.cs  WorkspaceHistoryUpdateOperationDelegate.cs
SVNexus/Extension/: ColorExtension.cs  CommonExtension.cs  DatabaseConnectionExtension.cs  DatabaseManagerExtension.cs  DifferenceLineExtension.cs  EncodingExtension.cs  ExceptionExtension.cs  Extension.cs  RelayCommandExtension.cs  StringExtension.cs  SvnErrnoConstantsExtension.cs  WorkspaceHistoryExtension.cs
SVNexus/Inject/: Ambient.cs  InjectionProvider.cs  Services.cs
SVNexus/Messages/: ClipBoardMessages.cs  Manager.cs  OnAddTab.cs  OnCancel.cs  OnCheckout.cs  OnExport.cs  OnFilePickerOpen.cs  OnFilePickerSave.cs  OnFolderPickerOpen.cs  OnGetContext.cs  OnGetDialogHostId.cs  OnGetSingleTaskQueue.cs  OnGetTab.cs  OnGetWorkingCopyPath.cs  OnGetWorkingCopyRoot.cs  OnGetWorkspaceHistory.cs  OnInitializeRepository.cs  OnNotWorkingCopy.cs  OnNotification.cs  OnOpenRepository.cs  OnRefreshWorkingCopy.cs  OnRemoveTab.cs  OnSelectedItem.cs  OnSelectedItemChanged.cs  OnSetChecked.cs  OnSetExpanded.cs  OnSetThemeVariant.cs  OnSetWorkspaceHistory.cs  OnShowToast.cs  (+4 more)
SVNexus/rust/: Cargo.toml  build.rs  gen.sh
SVNexus/rust/docs/: svn_client_add5.md  svn_client_cleanup2.md  svn_client_copy7.md  wc_is_locked.md
SVNexus/rust/migration/: Cargo.toml
SVNexus/rust/migration/src/: lib.rs  m20260409_143019_initialize.rs
SVNexus/rust/src/: app.rs  apr.rs  db.rs  error.rs  extensions.rs  lib.rs  utils.rs
SVNexus/rust/src/entities/: log_changed_path_entry.rs  log_entry.rs  mod.rs  prelude.rs  property.rs  workspace_history.rs  workspace_history_group.rs
SVNexus/rust/src/subversion/: context.rs  export.rs  mod.rs  property.rs  ra.rs  stream.rs  test.txt  tests.rs  utils.rs  version.rs  wc.rs
SVNexus/rust/src/subversion/context/: conflict.rs  import.rs  info.rs  list.rs  log.rs  mod.rs  patch.rs  status.rs
SVNexus/rust/svnexus_macro/: Cargo.toml
SVNexus/rust/svnexus_macro/src/: lib.rs
Tabalonia/: Tabalonia.csproj
csr/: Cargo.toml
csr/src/: main.rs
(+160 files in other folders)
