[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
uniffi = { version = "0.31.0", features = ["tokio"] }
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
derive-new = "0.7.0"
num_enum = "0.7.3"
parking_lot = "0.12.3"
snafu = { version = "0.8.5", features = ["backtrace"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.15.1", features = ["v4"] }
bitflags = "2.9.0"
once_cell = { version = "1.21.3", features = ["parking_lot"] }
tempfile = "3.23.0"
easy-ext = "1.0.2"
cfg-if = "1.0.0"
svnexus_macro = { path = "./svnexus_macro" }
resvg = "0.47.0"
tiny-skia = "0.12.0"
fontdb = "0.23.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
walkdir = "2.5.0"
humansize = "2.1.3"
# redb = "3.1.2"
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-sqlite", "runtime-tokio", "macros", "with-chrono", "with-uuid"] }
sea-query = "=1.0.0-rc.33"
migration = { path = "./migration" }
tracing-log = "0.2.0"
log = "0.4.29"
which = "8.0.2"



[build-dependencies]
bindgen = "0.72.1"
cfg-if = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"


[lib]
#crate-type = ["cdylib", "staticlib"]
crate-type = ["cdylib"]
